--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="center">
-        <h1>Emplyment statistics in Finland</h1>
+        <h1>Employment statistics in Finland</h1>
         <table>
             <thead>
                 <tr>
