--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
                     <th>Employed-%</th>
                 </tr>
             </thead>
-            <tbody id="table-rows">
-                
-            </tbody>
+            <tbody id="table-rows"></tbody>
         </table>
     </div>
 
